<resources>
    <string name="app_name">ASAT SL</string>

    <!-- General Strings -->
    <string name="title">ASAT SL</string>
    <string name="copyrigth">Asat Salud ® 2016 </string>
    <string name="email">Email</string>
    <string name="menu_title">Menu</string>


    <!-- Strings related to login -->
    <string name="login_user">User</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="checkbox_agree">I accept the norms of the</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="login_box">Register</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--String related to passChange -->

    <string name="pass_change_name">User name</string>
    <string name="actual_pass">Actual password</string>
    <string name="new_pass">New password</string>
    <string name="confirm_new">Confirm new password</string>
    <string name="passchange_submit">Send</string>

    <!--String related to newPass -->
    <string name="newPass_message">Please enter below the email that you use for registration,
    then a new temporal password will be send.</string>
    <string name="newPass_submit">Send</string>
    <string name="pass_not_match">The password doesn\'t match</string>
    <string name="new_pass_suceed">Your password has been updated</string>


    <!--String related to LOPD -->
    <string name="lopd_termns">I have read and accept</string>
    <string name="lopd_load">Loading...</string>
    <string name="lopd_accept">Accept</string>
    <string name="lopd_cancel">Cancel</string>
    <string name="lopd_back">Back</string>


    <!--Strins relatet to Messages-->
    <string name="msg_newpass">You must renew your temporary password</string>
    <string name="msg_newlopd">Our terms has been updated\n You must read and agree the new norms</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to Menu -->
    <string name="hospital_title">My hospital</string>
    <string name="record_title">My record</string>
    <string name="advices_title">Advices</string>
    <string name="notifications_title">Notifications</string>
    <string name="settings_title">Settings</string>
    <string name="about_title">About</string>

    <!-- Strings relatet to Hospital -->
    <string name="hospital_rules">Read hospital rules</string>
    <string name="hospital_images">See hospital images</string>

    <!-- Strings relatet to My Record -->
    <string name="record_name">Name</string>
    <string name="record_lastName">Last Name</string>

    <!-- Strings relatet to My Record Detail -->
    <string name="record_detail_consultation">Consultation</string>
    <string name="record_detail_date">Date</string>


    <!-- Strings related to Settings-->
    <string name="settings_password">Change password</string>
    <string name="settings_save">Save</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_message">The changes have been saved</string>

    <!-- Strings related to About-->
    <string name="about_version">Version</string>


    <string-array name="language_array">
        <item>Español</item>
        <item>English</item>
    </string-array>
</resources>
