<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asat.amesoft.asat.fragments.LOPDFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="10"
    android:background="@drawable/asat_layout"
    >



    <TextView
        android:id="@+id/lopd_tittle"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tittle"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|top" />

    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        >
        <TextView
            android:id="@+id/lopd_terms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lopd_load" />
    </ScrollView>


    <CheckBox
        android:id="@+id/lopd_checkbox"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/lopd_termns"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <Button
            android:id="@+id/lopd_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lopd_cancel"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/lopd_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lopd_accept"
            android:enabled="false"

            />

    </LinearLayout>


</LinearLayout>
