<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragments.LoginFragment">




    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/logo_asat"
            android:paddingBottom="26dp"
            android:layout_marginBottom="50dp"
            />

        <TextView
            android:text="@string/login_box"
            android:textStyle="bold"
            android:textColor="@color/colorBackground"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:background="@drawable/login_box"
            android:layout_width="100dp"
            android:layout_height="30dp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/login_layout"
            >


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/login_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <CheckBox
                android:id="@+id/login_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_agree"
                android:layout_marginTop="10dp"
                android:layout_gravity="center" />

                <TextView

                    android:id="@+id/login_lopd"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text=" LOPD"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                >


                <Button
                    android:id="@+id/login_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_submit"
                    android:textStyle="bold"
                    android:enabled="false"
                    android:onClick="login_submit"
                    />


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_pass"
                android:id="@+id/forgot_pass"
                android:onClick="forgot_pass"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_marginTop="20dp"
            android:textColor="@color/colorBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyrigth"
            android:gravity="center"
            />
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent" />

</LinearLayout>
