<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    android:paddingBottom="25dp"
    tools:context="com.asat.amesoft.asat.fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/about"
            />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            />
        <TextView
            android:id="@+id/about_title"
            android:paddingLeft="10dp"
            android:text="@string/about_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <RelativeLayout
        android:background="@drawable/asat_layout"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/about_appname"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_marginTop="46dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_version"
            android:layout_below="@+id/about_appname"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView2" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_version"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />



    </RelativeLayout>


</LinearLayout>