<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    android:paddingBottom="25dp"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/configure"
            />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            />
        <TextView
            android:id="@+id/settings_title"
            android:paddingLeft="10dp"
            android:text="@string/settings_titile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <RelativeLayout
        android:background="@drawable/asat_layout"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        >

        <Spinner
            android:id="@+id/setting_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/setting_pass"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/settings_password"
            android:layout_below="@+id/setting_language"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <LinearLayout
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <Button
                android:id="@+id/setting_save"
                android:text="@string/settings_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                />

            <Button
                android:id="@+id/setting_cancel"
                android:text="@string/settings_cancel"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>
